Archive2/a5/6b03fb7d03a7d2/output
main.cpp: In function 'int main()':
main.cpp:8:1: error: 'k' was not declared in this scope
 k=3
 ^
main.cpp:10:20: error: 'j' was not declared in this scope
     for(int j = 1; j < s.size(); ++j) 
                    ^
main.cpp:10:24: error: 's' was not declared in this scope
     for(int j = 1; j < s.size(); ++j) 
                        ^
